# swarm-files

./: .gitattributes  .gitignore  LICENSE  README.md  check_agent_output.py  env.azure.example  env.openai.example  json_spec.md  pyproject.toml
datasets/: check_agent_output.py
datasets/lab_run_mirai/: README.md  capture.pcap  event_classifications.json  events.json  expected_classifications.json
datasets/realistic_sample/: README.md  event_classifications.json  events.json  expected_classifications.json  manifest.json
envs/: env.azure  env.openai
src/malware_analysis_agent/: agent_config_validator.py  constants.py  crew.py  embedder.py  event_inputs.py  knowledge_storage.py  knowledge_token_validator.py  main.py  preamble.py  prompt_integrity.py  schema.py  token_counter.py
src/malware_analysis_agent/config/: agents.yaml  tasks.yaml
src/project_contracts/: __init__.py  agent_output.py  events.py  grading_schema.py
